// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@fartts/lib/vec/keys produces a keyIndexMap of size 6 and a a swizzledSet of size 90 1`] = `
Object {
  "keyIndexMap": Map {
    "x" => 0,
    "y" => 1,
    "r" => 0,
    "g" => 1,
    "s" => 0,
    "t" => 1,
  },
  "swizzledSet": Set {
    "x",
    "xx",
    "xxx",
    "xxxx",
    "xxxy",
    "xxy",
    "xxyx",
    "xxyy",
    "xy",
    "xyx",
    "xyxx",
    "xyxy",
    "xyy",
    "xyyx",
    "xyyy",
    "y",
    "yx",
    "yxx",
    "yxxx",
    "yxxy",
    "yxy",
    "yxyx",
    "yxyy",
    "yy",
    "yyx",
    "yyxx",
    "yyxy",
    "yyy",
    "yyyx",
    "yyyy",
    "r",
    "rr",
    "rrr",
    "rrrr",
    "rrrg",
    "rrg",
    "rrgr",
    "rrgg",
    "rg",
    "rgr",
    "rgrr",
    "rgrg",
    "rgg",
    "rggr",
    "rggg",
    "g",
    "gr",
    "grr",
    "grrr",
    "grrg",
    "grg",
    "grgr",
    "grgg",
    "gg",
    "ggr",
    "ggrr",
    "ggrg",
    "ggg",
    "gggr",
    "gggg",
    "s",
    "ss",
    "sss",
    "ssss",
    "ssst",
    "sst",
    "ssts",
    "sstt",
    "st",
    "sts",
    "stss",
    "stst",
    "stt",
    "stts",
    "sttt",
    "t",
    "ts",
    "tss",
    "tsss",
    "tsst",
    "tst",
    "tsts",
    "tstt",
    "tt",
    "tts",
    "ttss",
    "ttst",
    "ttt",
    "ttts",
    "tttt",
  },
}
`;

exports[`@fartts/lib/vec/keys produces a keyIndexMap of size 9 and a a swizzledSet of size 360 1`] = `
Object {
  "keyIndexMap": Map {
    "x" => 0,
    "y" => 1,
    "z" => 2,
    "r" => 0,
    "g" => 1,
    "b" => 2,
    "s" => 0,
    "t" => 1,
    "p" => 2,
  },
  "swizzledSet": Set {
    "x",
    "xx",
    "xxx",
    "xxxx",
    "xxxy",
    "xxxz",
    "xxy",
    "xxyx",
    "xxyy",
    "xxyz",
    "xxz",
    "xxzx",
    "xxzy",
    "xxzz",
    "xy",
    "xyx",
    "xyxx",
    "xyxy",
    "xyxz",
    "xyy",
    "xyyx",
    "xyyy",
    "xyyz",
    "xyz",
    "xyzx",
    "xyzy",
    "xyzz",
    "xz",
    "xzx",
    "xzxx",
    "xzxy",
    "xzxz",
    "xzy",
    "xzyx",
    "xzyy",
    "xzyz",
    "xzz",
    "xzzx",
    "xzzy",
    "xzzz",
    "y",
    "yx",
    "yxx",
    "yxxx",
    "yxxy",
    "yxxz",
    "yxy",
    "yxyx",
    "yxyy",
    "yxyz",
    "yxz",
    "yxzx",
    "yxzy",
    "yxzz",
    "yy",
    "yyx",
    "yyxx",
    "yyxy",
    "yyxz",
    "yyy",
    "yyyx",
    "yyyy",
    "yyyz",
    "yyz",
    "yyzx",
    "yyzy",
    "yyzz",
    "yz",
    "yzx",
    "yzxx",
    "yzxy",
    "yzxz",
    "yzy",
    "yzyx",
    "yzyy",
    "yzyz",
    "yzz",
    "yzzx",
    "yzzy",
    "yzzz",
    "z",
    "zx",
    "zxx",
    "zxxx",
    "zxxy",
    "zxxz",
    "zxy",
    "zxyx",
    "zxyy",
    "zxyz",
    "zxz",
    "zxzx",
    "zxzy",
    "zxzz",
    "zy",
    "zyx",
    "zyxx",
    "zyxy",
    "zyxz",
    "zyy",
    "zyyx",
    "zyyy",
    "zyyz",
    "zyz",
    "zyzx",
    "zyzy",
    "zyzz",
    "zz",
    "zzx",
    "zzxx",
    "zzxy",
    "zzxz",
    "zzy",
    "zzyx",
    "zzyy",
    "zzyz",
    "zzz",
    "zzzx",
    "zzzy",
    "zzzz",
    "r",
    "rr",
    "rrr",
    "rrrr",
    "rrrg",
    "rrrb",
    "rrg",
    "rrgr",
    "rrgg",
    "rrgb",
    "rrb",
    "rrbr",
    "rrbg",
    "rrbb",
    "rg",
    "rgr",
    "rgrr",
    "rgrg",
    "rgrb",
    "rgg",
    "rggr",
    "rggg",
    "rggb",
    "rgb",
    "rgbr",
    "rgbg",
    "rgbb",
    "rb",
    "rbr",
    "rbrr",
    "rbrg",
    "rbrb",
    "rbg",
    "rbgr",
    "rbgg",
    "rbgb",
    "rbb",
    "rbbr",
    "rbbg",
    "rbbb",
    "g",
    "gr",
    "grr",
    "grrr",
    "grrg",
    "grrb",
    "grg",
    "grgr",
    "grgg",
    "grgb",
    "grb",
    "grbr",
    "grbg",
    "grbb",
    "gg",
    "ggr",
    "ggrr",
    "ggrg",
    "ggrb",
    "ggg",
    "gggr",
    "gggg",
    "gggb",
    "ggb",
    "ggbr",
    "ggbg",
    "ggbb",
    "gb",
    "gbr",
    "gbrr",
    "gbrg",
    "gbrb",
    "gbg",
    "gbgr",
    "gbgg",
    "gbgb",
    "gbb",
    "gbbr",
    "gbbg",
    "gbbb",
    "b",
    "br",
    "brr",
    "brrr",
    "brrg",
    "brrb",
    "brg",
    "brgr",
    "brgg",
    "brgb",
    "brb",
    "brbr",
    "brbg",
    "brbb",
    "bg",
    "bgr",
    "bgrr",
    "bgrg",
    "bgrb",
    "bgg",
    "bggr",
    "bggg",
    "bggb",
    "bgb",
    "bgbr",
    "bgbg",
    "bgbb",
    "bb",
    "bbr",
    "bbrr",
    "bbrg",
    "bbrb",
    "bbg",
    "bbgr",
    "bbgg",
    "bbgb",
    "bbb",
    "bbbr",
    "bbbg",
    "bbbb",
    "s",
    "ss",
    "sss",
    "ssss",
    "ssst",
    "sssp",
    "sst",
    "ssts",
    "sstt",
    "sstp",
    "ssp",
    "ssps",
    "sspt",
    "sspp",
    "st",
    "sts",
    "stss",
    "stst",
    "stsp",
    "stt",
    "stts",
    "sttt",
    "sttp",
    "stp",
    "stps",
    "stpt",
    "stpp",
    "sp",
    "sps",
    "spss",
    "spst",
    "spsp",
    "spt",
    "spts",
    "sptt",
    "sptp",
    "spp",
    "spps",
    "sppt",
    "sppp",
    "t",
    "ts",
    "tss",
    "tsss",
    "tsst",
    "tssp",
    "tst",
    "tsts",
    "tstt",
    "tstp",
    "tsp",
    "tsps",
    "tspt",
    "tspp",
    "tt",
    "tts",
    "ttss",
    "ttst",
    "ttsp",
    "ttt",
    "ttts",
    "tttt",
    "tttp",
    "ttp",
    "ttps",
    "ttpt",
    "ttpp",
    "tp",
    "tps",
    "tpss",
    "tpst",
    "tpsp",
    "tpt",
    "tpts",
    "tptt",
    "tptp",
    "tpp",
    "tpps",
    "tppt",
    "tppp",
    "p",
    "ps",
    "pss",
    "psss",
    "psst",
    "pssp",
    "pst",
    "psts",
    "pstt",
    "pstp",
    "psp",
    "psps",
    "pspt",
    "pspp",
    "pt",
    "pts",
    "ptss",
    "ptst",
    "ptsp",
    "ptt",
    "ptts",
    "pttt",
    "pttp",
    "ptp",
    "ptps",
    "ptpt",
    "ptpp",
    "pp",
    "pps",
    "ppss",
    "ppst",
    "ppsp",
    "ppt",
    "ppts",
    "pptt",
    "pptp",
    "ppp",
    "ppps",
    "pppt",
    "pppp",
  },
}
`;

exports[`@fartts/lib/vec/keys produces a keyIndexMap of size 12 and a a swizzledSet of size 1020 1`] = `
Object {
  "keyIndexMap": Map {
    "x" => 0,
    "y" => 1,
    "z" => 2,
    "w" => 3,
    "r" => 0,
    "g" => 1,
    "b" => 2,
    "a" => 3,
    "s" => 0,
    "t" => 1,
    "p" => 2,
    "q" => 3,
  },
  "swizzledSet": Set {
    "x",
    "xx",
    "xxx",
    "xxxx",
    "xxxy",
    "xxxz",
    "xxxw",
    "xxy",
    "xxyx",
    "xxyy",
    "xxyz",
    "xxyw",
    "xxz",
    "xxzx",
    "xxzy",
    "xxzz",
    "xxzw",
    "xxw",
    "xxwx",
    "xxwy",
    "xxwz",
    "xxww",
    "xy",
    "xyx",
    "xyxx",
    "xyxy",
    "xyxz",
    "xyxw",
    "xyy",
    "xyyx",
    "xyyy",
    "xyyz",
    "xyyw",
    "xyz",
    "xyzx",
    "xyzy",
    "xyzz",
    "xyzw",
    "xyw",
    "xywx",
    "xywy",
    "xywz",
    "xyww",
    "xz",
    "xzx",
    "xzxx",
    "xzxy",
    "xzxz",
    "xzxw",
    "xzy",
    "xzyx",
    "xzyy",
    "xzyz",
    "xzyw",
    "xzz",
    "xzzx",
    "xzzy",
    "xzzz",
    "xzzw",
    "xzw",
    "xzwx",
    "xzwy",
    "xzwz",
    "xzww",
    "xw",
    "xwx",
    "xwxx",
    "xwxy",
    "xwxz",
    "xwxw",
    "xwy",
    "xwyx",
    "xwyy",
    "xwyz",
    "xwyw",
    "xwz",
    "xwzx",
    "xwzy",
    "xwzz",
    "xwzw",
    "xww",
    "xwwx",
    "xwwy",
    "xwwz",
    "xwww",
    "y",
    "yx",
    "yxx",
    "yxxx",
    "yxxy",
    "yxxz",
    "yxxw",
    "yxy",
    "yxyx",
    "yxyy",
    "yxyz",
    "yxyw",
    "yxz",
    "yxzx",
    "yxzy",
    "yxzz",
    "yxzw",
    "yxw",
    "yxwx",
    "yxwy",
    "yxwz",
    "yxww",
    "yy",
    "yyx",
    "yyxx",
    "yyxy",
    "yyxz",
    "yyxw",
    "yyy",
    "yyyx",
    "yyyy",
    "yyyz",
    "yyyw",
    "yyz",
    "yyzx",
    "yyzy",
    "yyzz",
    "yyzw",
    "yyw",
    "yywx",
    "yywy",
    "yywz",
    "yyww",
    "yz",
    "yzx",
    "yzxx",
    "yzxy",
    "yzxz",
    "yzxw",
    "yzy",
    "yzyx",
    "yzyy",
    "yzyz",
    "yzyw",
    "yzz",
    "yzzx",
    "yzzy",
    "yzzz",
    "yzzw",
    "yzw",
    "yzwx",
    "yzwy",
    "yzwz",
    "yzww",
    "yw",
    "ywx",
    "ywxx",
    "ywxy",
    "ywxz",
    "ywxw",
    "ywy",
    "ywyx",
    "ywyy",
    "ywyz",
    "ywyw",
    "ywz",
    "ywzx",
    "ywzy",
    "ywzz",
    "ywzw",
    "yww",
    "ywwx",
    "ywwy",
    "ywwz",
    "ywww",
    "z",
    "zx",
    "zxx",
    "zxxx",
    "zxxy",
    "zxxz",
    "zxxw",
    "zxy",
    "zxyx",
    "zxyy",
    "zxyz",
    "zxyw",
    "zxz",
    "zxzx",
    "zxzy",
    "zxzz",
    "zxzw",
    "zxw",
    "zxwx",
    "zxwy",
    "zxwz",
    "zxww",
    "zy",
    "zyx",
    "zyxx",
    "zyxy",
    "zyxz",
    "zyxw",
    "zyy",
    "zyyx",
    "zyyy",
    "zyyz",
    "zyyw",
    "zyz",
    "zyzx",
    "zyzy",
    "zyzz",
    "zyzw",
    "zyw",
    "zywx",
    "zywy",
    "zywz",
    "zyww",
    "zz",
    "zzx",
    "zzxx",
    "zzxy",
    "zzxz",
    "zzxw",
    "zzy",
    "zzyx",
    "zzyy",
    "zzyz",
    "zzyw",
    "zzz",
    "zzzx",
    "zzzy",
    "zzzz",
    "zzzw",
    "zzw",
    "zzwx",
    "zzwy",
    "zzwz",
    "zzww",
    "zw",
    "zwx",
    "zwxx",
    "zwxy",
    "zwxz",
    "zwxw",
    "zwy",
    "zwyx",
    "zwyy",
    "zwyz",
    "zwyw",
    "zwz",
    "zwzx",
    "zwzy",
    "zwzz",
    "zwzw",
    "zww",
    "zwwx",
    "zwwy",
    "zwwz",
    "zwww",
    "w",
    "wx",
    "wxx",
    "wxxx",
    "wxxy",
    "wxxz",
    "wxxw",
    "wxy",
    "wxyx",
    "wxyy",
    "wxyz",
    "wxyw",
    "wxz",
    "wxzx",
    "wxzy",
    "wxzz",
    "wxzw",
    "wxw",
    "wxwx",
    "wxwy",
    "wxwz",
    "wxww",
    "wy",
    "wyx",
    "wyxx",
    "wyxy",
    "wyxz",
    "wyxw",
    "wyy",
    "wyyx",
    "wyyy",
    "wyyz",
    "wyyw",
    "wyz",
    "wyzx",
    "wyzy",
    "wyzz",
    "wyzw",
    "wyw",
    "wywx",
    "wywy",
    "wywz",
    "wyww",
    "wz",
    "wzx",
    "wzxx",
    "wzxy",
    "wzxz",
    "wzxw",
    "wzy",
    "wzyx",
    "wzyy",
    "wzyz",
    "wzyw",
    "wzz",
    "wzzx",
    "wzzy",
    "wzzz",
    "wzzw",
    "wzw",
    "wzwx",
    "wzwy",
    "wzwz",
    "wzww",
    "ww",
    "wwx",
    "wwxx",
    "wwxy",
    "wwxz",
    "wwxw",
    "wwy",
    "wwyx",
    "wwyy",
    "wwyz",
    "wwyw",
    "wwz",
    "wwzx",
    "wwzy",
    "wwzz",
    "wwzw",
    "www",
    "wwwx",
    "wwwy",
    "wwwz",
    "wwww",
    "r",
    "rr",
    "rrr",
    "rrrr",
    "rrrg",
    "rrrb",
    "rrra",
    "rrg",
    "rrgr",
    "rrgg",
    "rrgb",
    "rrga",
    "rrb",
    "rrbr",
    "rrbg",
    "rrbb",
    "rrba",
    "rra",
    "rrar",
    "rrag",
    "rrab",
    "rraa",
    "rg",
    "rgr",
    "rgrr",
    "rgrg",
    "rgrb",
    "rgra",
    "rgg",
    "rggr",
    "rggg",
    "rggb",
    "rgga",
    "rgb",
    "rgbr",
    "rgbg",
    "rgbb",
    "rgba",
    "rga",
    "rgar",
    "rgag",
    "rgab",
    "rgaa",
    "rb",
    "rbr",
    "rbrr",
    "rbrg",
    "rbrb",
    "rbra",
    "rbg",
    "rbgr",
    "rbgg",
    "rbgb",
    "rbga",
    "rbb",
    "rbbr",
    "rbbg",
    "rbbb",
    "rbba",
    "rba",
    "rbar",
    "rbag",
    "rbab",
    "rbaa",
    "ra",
    "rar",
    "rarr",
    "rarg",
    "rarb",
    "rara",
    "rag",
    "ragr",
    "ragg",
    "ragb",
    "raga",
    "rab",
    "rabr",
    "rabg",
    "rabb",
    "raba",
    "raa",
    "raar",
    "raag",
    "raab",
    "raaa",
    "g",
    "gr",
    "grr",
    "grrr",
    "grrg",
    "grrb",
    "grra",
    "grg",
    "grgr",
    "grgg",
    "grgb",
    "grga",
    "grb",
    "grbr",
    "grbg",
    "grbb",
    "grba",
    "gra",
    "grar",
    "grag",
    "grab",
    "graa",
    "gg",
    "ggr",
    "ggrr",
    "ggrg",
    "ggrb",
    "ggra",
    "ggg",
    "gggr",
    "gggg",
    "gggb",
    "ggga",
    "ggb",
    "ggbr",
    "ggbg",
    "ggbb",
    "ggba",
    "gga",
    "ggar",
    "ggag",
    "ggab",
    "ggaa",
    "gb",
    "gbr",
    "gbrr",
    "gbrg",
    "gbrb",
    "gbra",
    "gbg",
    "gbgr",
    "gbgg",
    "gbgb",
    "gbga",
    "gbb",
    "gbbr",
    "gbbg",
    "gbbb",
    "gbba",
    "gba",
    "gbar",
    "gbag",
    "gbab",
    "gbaa",
    "ga",
    "gar",
    "garr",
    "garg",
    "garb",
    "gara",
    "gag",
    "gagr",
    "gagg",
    "gagb",
    "gaga",
    "gab",
    "gabr",
    "gabg",
    "gabb",
    "gaba",
    "gaa",
    "gaar",
    "gaag",
    "gaab",
    "gaaa",
    "b",
    "br",
    "brr",
    "brrr",
    "brrg",
    "brrb",
    "brra",
    "brg",
    "brgr",
    "brgg",
    "brgb",
    "brga",
    "brb",
    "brbr",
    "brbg",
    "brbb",
    "brba",
    "bra",
    "brar",
    "brag",
    "brab",
    "braa",
    "bg",
    "bgr",
    "bgrr",
    "bgrg",
    "bgrb",
    "bgra",
    "bgg",
    "bggr",
    "bggg",
    "bggb",
    "bgga",
    "bgb",
    "bgbr",
    "bgbg",
    "bgbb",
    "bgba",
    "bga",
    "bgar",
    "bgag",
    "bgab",
    "bgaa",
    "bb",
    "bbr",
    "bbrr",
    "bbrg",
    "bbrb",
    "bbra",
    "bbg",
    "bbgr",
    "bbgg",
    "bbgb",
    "bbga",
    "bbb",
    "bbbr",
    "bbbg",
    "bbbb",
    "bbba",
    "bba",
    "bbar",
    "bbag",
    "bbab",
    "bbaa",
    "ba",
    "bar",
    "barr",
    "barg",
    "barb",
    "bara",
    "bag",
    "bagr",
    "bagg",
    "bagb",
    "baga",
    "bab",
    "babr",
    "babg",
    "babb",
    "baba",
    "baa",
    "baar",
    "baag",
    "baab",
    "baaa",
    "a",
    "ar",
    "arr",
    "arrr",
    "arrg",
    "arrb",
    "arra",
    "arg",
    "argr",
    "argg",
    "argb",
    "arga",
    "arb",
    "arbr",
    "arbg",
    "arbb",
    "arba",
    "ara",
    "arar",
    "arag",
    "arab",
    "araa",
    "ag",
    "agr",
    "agrr",
    "agrg",
    "agrb",
    "agra",
    "agg",
    "aggr",
    "aggg",
    "aggb",
    "agga",
    "agb",
    "agbr",
    "agbg",
    "agbb",
    "agba",
    "aga",
    "agar",
    "agag",
    "agab",
    "agaa",
    "ab",
    "abr",
    "abrr",
    "abrg",
    "abrb",
    "abra",
    "abg",
    "abgr",
    "abgg",
    "abgb",
    "abga",
    "abb",
    "abbr",
    "abbg",
    "abbb",
    "abba",
    "aba",
    "abar",
    "abag",
    "abab",
    "abaa",
    "aa",
    "aar",
    "aarr",
    "aarg",
    "aarb",
    "aara",
    "aag",
    "aagr",
    "aagg",
    "aagb",
    "aaga",
    "aab",
    "aabr",
    "aabg",
    "aabb",
    "aaba",
    "aaa",
    "aaar",
    "aaag",
    "aaab",
    "aaaa",
    "s",
    "ss",
    "sss",
    "ssss",
    "ssst",
    "sssp",
    "sssq",
    "sst",
    "ssts",
    "sstt",
    "sstp",
    "sstq",
    "ssp",
    "ssps",
    "sspt",
    "sspp",
    "sspq",
    "ssq",
    "ssqs",
    "ssqt",
    "ssqp",
    "ssqq",
    "st",
    "sts",
    "stss",
    "stst",
    "stsp",
    "stsq",
    "stt",
    "stts",
    "sttt",
    "sttp",
    "sttq",
    "stp",
    "stps",
    "stpt",
    "stpp",
    "stpq",
    "stq",
    "stqs",
    "stqt",
    "stqp",
    "stqq",
    "sp",
    "sps",
    "spss",
    "spst",
    "spsp",
    "spsq",
    "spt",
    "spts",
    "sptt",
    "sptp",
    "sptq",
    "spp",
    "spps",
    "sppt",
    "sppp",
    "sppq",
    "spq",
    "spqs",
    "spqt",
    "spqp",
    "spqq",
    "sq",
    "sqs",
    "sqss",
    "sqst",
    "sqsp",
    "sqsq",
    "sqt",
    "sqts",
    "sqtt",
    "sqtp",
    "sqtq",
    "sqp",
    "sqps",
    "sqpt",
    "sqpp",
    "sqpq",
    "sqq",
    "sqqs",
    "sqqt",
    "sqqp",
    "sqqq",
    "t",
    "ts",
    "tss",
    "tsss",
    "tsst",
    "tssp",
    "tssq",
    "tst",
    "tsts",
    "tstt",
    "tstp",
    "tstq",
    "tsp",
    "tsps",
    "tspt",
    "tspp",
    "tspq",
    "tsq",
    "tsqs",
    "tsqt",
    "tsqp",
    "tsqq",
    "tt",
    "tts",
    "ttss",
    "ttst",
    "ttsp",
    "ttsq",
    "ttt",
    "ttts",
    "tttt",
    "tttp",
    "tttq",
    "ttp",
    "ttps",
    "ttpt",
    "ttpp",
    "ttpq",
    "ttq",
    "ttqs",
    "ttqt",
    "ttqp",
    "ttqq",
    "tp",
    "tps",
    "tpss",
    "tpst",
    "tpsp",
    "tpsq",
    "tpt",
    "tpts",
    "tptt",
    "tptp",
    "tptq",
    "tpp",
    "tpps",
    "tppt",
    "tppp",
    "tppq",
    "tpq",
    "tpqs",
    "tpqt",
    "tpqp",
    "tpqq",
    "tq",
    "tqs",
    "tqss",
    "tqst",
    "tqsp",
    "tqsq",
    "tqt",
    "tqts",
    "tqtt",
    "tqtp",
    "tqtq",
    "tqp",
    "tqps",
    "tqpt",
    "tqpp",
    "tqpq",
    "tqq",
    "tqqs",
    "tqqt",
    "tqqp",
    "tqqq",
    "p",
    "ps",
    "pss",
    "psss",
    "psst",
    "pssp",
    "pssq",
    "pst",
    "psts",
    "pstt",
    "pstp",
    "pstq",
    "psp",
    "psps",
    "pspt",
    "pspp",
    "pspq",
    "psq",
    "psqs",
    "psqt",
    "psqp",
    "psqq",
    "pt",
    "pts",
    "ptss",
    "ptst",
    "ptsp",
    "ptsq",
    "ptt",
    "ptts",
    "pttt",
    "pttp",
    "pttq",
    "ptp",
    "ptps",
    "ptpt",
    "ptpp",
    "ptpq",
    "ptq",
    "ptqs",
    "ptqt",
    "ptqp",
    "ptqq",
    "pp",
    "pps",
    "ppss",
    "ppst",
    "ppsp",
    "ppsq",
    "ppt",
    "ppts",
    "pptt",
    "pptp",
    "pptq",
    "ppp",
    "ppps",
    "pppt",
    "pppp",
    "pppq",
    "ppq",
    "ppqs",
    "ppqt",
    "ppqp",
    "ppqq",
    "pq",
    "pqs",
    "pqss",
    "pqst",
    "pqsp",
    "pqsq",
    "pqt",
    "pqts",
    "pqtt",
    "pqtp",
    "pqtq",
    "pqp",
    "pqps",
    "pqpt",
    "pqpp",
    "pqpq",
    "pqq",
    "pqqs",
    "pqqt",
    "pqqp",
    "pqqq",
    "q",
    "qs",
    "qss",
    "qsss",
    "qsst",
    "qssp",
    "qssq",
    "qst",
    "qsts",
    "qstt",
    "qstp",
    "qstq",
    "qsp",
    "qsps",
    "qspt",
    "qspp",
    "qspq",
    "qsq",
    "qsqs",
    "qsqt",
    "qsqp",
    "qsqq",
    "qt",
    "qts",
    "qtss",
    "qtst",
    "qtsp",
    "qtsq",
    "qtt",
    "qtts",
    "qttt",
    "qttp",
    "qttq",
    "qtp",
    "qtps",
    "qtpt",
    "qtpp",
    "qtpq",
    "qtq",
    "qtqs",
    "qtqt",
    "qtqp",
    "qtqq",
    "qp",
    "qps",
    "qpss",
    "qpst",
    "qpsp",
    "qpsq",
    "qpt",
    "qpts",
    "qptt",
    "qptp",
    "qptq",
    "qpp",
    "qpps",
    "qppt",
    "qppp",
    "qppq",
    "qpq",
    "qpqs",
    "qpqt",
    "qpqp",
    "qpqq",
    "qq",
    "qqs",
    "qqss",
    "qqst",
    "qqsp",
    "qqsq",
    "qqt",
    "qqts",
    "qqtt",
    "qqtp",
    "qqtq",
    "qqp",
    "qqps",
    "qqpt",
    "qqpp",
    "qqpq",
    "qqq",
    "qqqs",
    "qqqt",
    "qqqp",
    "qqqq",
  },
}
`;
